# basis-strategy-v1

./: .coverage  .cursor-agent-config.json  .cursorignore  .cursorrules  .dockerignore  .env.dev  .env.dev.backup  .env.local  .env.production  .env.staging  .gitignore  =0.21.0  AGENT_A_VERBOSE_INSTRUCTIONS.md  AGENT_B_COMPLETION_SUMMARY.md  AGENT_CONFIG_QUALITY_GATES_TASK_REPORT.md  AGENT_SETUP.md  AGENT_STARTUP_PROMPT.md  ARCHITECTURE_COMPLIANCE_CODE_SCANNER_REPORT_2025-10-10.md  BTC_BASIS_IMPLEMENTATION_PLAN.md  CODE_AUDIT_AND_CLEANUP_ANALYSIS.md  CONFIGURATION_QUALITY_GATES_INTEGRATION_SUMMARY.md  CONFIG_ALIGNMENT_ANALYSIS.md  CONFIG_ENV_VAR_COMPARISON_REPORT.md  CONFIG_SPEC_YAML_COVERAGE_GAPS_REPORT.md  CONFIG_USAGE_CLEANUP_PLAN.md  CONVERSION_METHODS_IMPLEMENTATION_SUMMARY.md  CURRENT_EXECUTION_WORKFLOW_MAP.md  DATA_ARCHITECTURE_REFACTOR_PLAN.md  DETAILED_CONFIG_VIOLATIONS_ASSESSMENT.md  DOCS_LOGICAL_INCONSISTENCY_REPORT_2025-10-10.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile.agent  ENHANCED_CONFIG_VIOLATIONS_ANALYSIS.md  ENVIRONMENT_VARIABLES_CONFIG_FIELDS_AUDIT_REPORT.md  EVENT_ENGINE_FIXES_AND_TESTS_COMPLETE.md  EXECUTION_ARCHITECTURE_ANALYSIS.md  FAIL_FAST_IMPLEMENTATION_SUMMARY.md  FAIL_FAST_QUALITY_GATE_STATUS.md  FAST_SLOW_WITHDRAWAL_RESERVE_RATIO_REMOVAL_SUMMARY.md  FINAL_COMPLETION_GUIDE.md  (+88 more)
backend/: .coverage  env.test  env.unified  env.unified.backup  env.unified.txt  pyproject.toml  test_event_log.csv
backend/src/basis_strategy_v1/: __version__.py
backend/src/basis_strategy_v1/api/: __init__.py  dependencies.py  health.py  main.py
backend/src/basis_strategy_v1/api/middleware/: __init__.py  correlation.py
backend/src/basis_strategy_v1/api/models/: __init__.py  requests.py  responses.py
backend/src/basis_strategy_v1/api/routes/: __init__.py  auth.py  backtest.py  capital.py  charts.py  component_health.py  config.py  health.py  live_trading.py  results.py  strategies.py
backend/src/basis_strategy_v1/core/: __init__.py
backend/src/basis_strategy_v1/core/components/: __init__.py  exposure_monitor.py  pnl_monitor.py  position_monitor.py  position_update_handler.py  risk_monitor.py  strategy_manager.py
backend/src/basis_strategy_v1/core/config/: __init__.py  config_models.py  config_union_models.py  models.py
backend/src/basis_strategy_v1/core/error_codes/: __init__.py  error_code_registry.py  exceptions.py
backend/src/basis_strategy_v1/core/errors/: __init__.py  component_error.py  error_codes.py
backend/src/basis_strategy_v1/core/event_engine/: __init__.py  event_driven_strategy_engine.py
backend/src/basis_strategy_v1/data_provider/: base_data_provider.py  btc_basis_data_provider.py  eth_basis_data_provider.py  eth_leveraged_data_provider.py  eth_staking_only_data_provider.py  pure_lending_data_provider.py  usdt_market_neutral_data_provider.py  usdt_market_neutral_no_leverage_data_provider.py
backend/src/basis_strategy_v1/venue_adapters/: __init__.py  aave_adapter.py  alchemy_adapter.py  binance_adapter.py  bybit_adapter.py  etherfi_adapter.py  instadapp_adapter.py  lido_adapter.py  ml_inference_api_adapter.py  morpho_adapter.py  okx_adapter.py  uniswap_adapter.py
(+1620 files in other folders)
